--- a/lddi.knx.networkdriver/pom.xml
+++ b/lddi.knx.networkdriver/pom.xml
@@ -1,145 +1,113 @@
 <?xml version="1.0"?>
-<project
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
-	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
-	<modelVersion>4.0.0</modelVersion>
-	<parent>
-		<artifactId>lddi.pom</artifactId>
-		<groupId>org.universAAL.lddi</groupId>
-		<version>1.2.2-SNAPSHOT</version>
-		<relativePath>../lddi.pom</relativePath>
-	</parent>
-	<artifactId>lddi.knx.networkdriver</artifactId>
-	<version>1.2.2-SNAPSHOT</version>
-	<packaging>bundle</packaging>
-	<name>universAAL LDDI KNX network driver</name>
-	<description>This bundle connects to a UPD Multicast Channel on the local IP network where KNX bus messages can be sent and received. Usually a KNX/IP Gateway is used to connect the UDP Multicast Channel to the KNX bus system. The base source code is taken from the DOG2 project on http://domoticdog.sourceforge.net and slightly modified to run standalone.</description>
-	<inceptionYear>2012</inceptionYear>
-	<organization>
-		<name>Austrian Institute of Technology (AIT)</name>
-		<url>http://www.ait.ac.at/</url>
-	</organization>
-	<licenses>
-		<license>
-			<name>The Apache Software License, Version 2.0</name>
-			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-			<distribution>repo</distribution>
-		</license>
-	</licenses>
-	<developers>
-		<developer>
-			<id>foex</id>
-			<name>Thomas Fuxreiter</name>
-			<email>thomas.fuxreiter@ait.ac.at</email>
-			<roles>
-				<role>developer</role>
-			</roles>
-			<timezone>CEST/CET</timezone>
-		</developer>
-	</developers>
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.apache.felix</groupId>
-				<artifactId>maven-bundle-plugin</artifactId>
-				<version>2.3.6</version>
-				<extensions>true</extensions>
-				<executions>
-					<execution>
-						<id>bundle-manifest</id>
-						<phase>process-classes</phase>
-						<goals>
-							<goal>manifest</goal>
-						</goals>
-					</execution>
-				</executions>
-				<configuration>
-					<instructions>
-						<Bundle-Name>${project.name}</Bundle-Name>
-						<Bundle-Activator>it.polito.elite.domotics.dog2.knxnetworkdriver.Activator</Bundle-Activator>
-						<Bundle-Description>${project.description}</Bundle-Description>
-						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
-						<Export-Package>it.polito.elite.domotics.dog2.knxnetworkdriver</Export-Package>
-					</instructions>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
-	<dependencies>
-		<dependency>
-			<groupId>org.universAAL.support</groupId>
-			<artifactId>itests</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.felix</groupId>
-			<artifactId>org.osgi.core</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.osgi</groupId>
-			<artifactId>osgi_R4_compendium</artifactId>
-			<version>1.0</version>
-			<scope>compile</scope>
-		</dependency>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.10</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.felix</groupId>
-			<artifactId>org.apache.felix.gogo.runtime</artifactId>
-			<version>0.10.0</version>
-		</dependency>
-		<!--
-			http://team.ops4j.org/wiki/display/paxexam/Pax+Exam+Maven+Dependencies
-			<dependency> <groupId>org.ops4j.pax.exam</groupId>
-			<artifactId>pax-exam-container-forked</artifactId>
-			<version>3.0.0.M4</version> <scope>test</scope> </dependency>
-
-			<dependency> <groupId>org.ops4j.pax.exam</groupId>
-			<artifactId>pax-exam-junit4</artifactId> <version>3.0.0.M4</version>
-			<scope>test</scope> </dependency> <dependency>
-			<groupId>org.ops4j.pax.exam</groupId>
-			<artifactId>pax-exam-link-mvn</artifactId>
-			<version>3.0.0.M4</version> <scope>test</scope> </dependency>
-
-			<dependency> <groupId>org.ops4j.pax.url</groupId>
-			<artifactId>pax-url-aether</artifactId> <version>1.5.0</version>
-			<scope>test</scope> </dependency> <dependency>
-			<groupId>org.apache.felix</groupId>
-			<artifactId>org.apache.felix.framework</artifactId>
-			<version>2.0.1</version> <scope>test</scope> </dependency>
-
-			<dependency> <groupId>ch.qos.logback</groupId>
-			<artifactId>logback-core</artifactId> <version>0.9.29</version>
-			<scope>test</scope> </dependency> <dependency>
-			<groupId>ch.qos.logback</groupId>
-			<artifactId>logback-classic</artifactId> <version>0.9.29</version>
-			<scope>test</scope> </dependency>
-		-->
-
-
-		<dependency>
-			<groupId>org.universAAL.lddi</groupId>
-			<artifactId>lddi.knx.library</artifactId>
-		</dependency>
-	</dependencies>
-
-	<properties>
-		<gforge.project.name>lddi</gforge.project.name>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-	</properties>
-
-	<profiles>
-		<profile>
-			<id>uAAL-Test-Runtime</id>
-			<dependencies>
-				<dependency>
-					<groupId>org.universAAL.middleware</groupId>
-					<artifactId>mw.data.serialization.osgi</artifactId>
-				</dependency>
-			</dependencies>
-		</profile>
-	</profiles>
+<project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd" xmlns="http://maven.apache.org/POM/4.0.0"
+    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+  <modelVersion>4.0.0</modelVersion>
+  <parent>
+    <groupId>org.universAAL.lddi</groupId>
+    <artifactId>lddi.pom</artifactId>
+    <version>1.3.1-SNAPSHOT</version>
+    <relativePath>../lddi.pom</relativePath>
+  </parent>
+  <artifactId>lddi.knx.networkdriver</artifactId>
+  <version>1.3.1-SNAPSHOT</version>
+  <packaging>bundle</packaging>
+  <name>universAAL LDDI KNX network driver</name>
+  <description>This bundle connects to a UPD Multicast Channel on the local IP network where KNX bus messages can be sent and received. Usually a KNX/IP Gateway is used to connect the UDP Multicast Channel to the KNX bus system. The base source code is taken from the DOG2 project on http://domoticdog.sourceforge.net and slightly modified to run standalone.</description>
+  <inceptionYear>2012</inceptionYear>
+  <organization>
+    <name>Austrian Institute of Technology (AIT)</name>
+    <url>http://www.ait.ac.at/</url>
+  </organization>
+  <licenses>
+    <license>
+      <name>The Apache Software License, Version 2.0</name>
+      <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+      <distribution>repo</distribution>
+    </license>
+  </licenses>
+  <developers>
+    <developer>
+      <id>foex</id>
+      <name>Thomas Fuxreiter</name>
+      <email>thomas.fuxreiter@ait.ac.at</email>
+      <roles>
+        <role>developer</role>
+      </roles>
+      <timezone>CEST/CET</timezone>
+    </developer>
+  </developers>
+  <properties>
+    <gforge.project.name>lddi</gforge.project.name>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+  </properties>
+  <dependencies>
+    <dependency>
+      <groupId>org.universAAL.support</groupId>
+      <artifactId>itests</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.felix</groupId>
+      <artifactId>org.osgi.core</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.osgi</groupId>
+      <artifactId>osgi_R4_compendium</artifactId>
+      <version>1.0</version>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.10</version>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.felix</groupId>
+      <artifactId>org.apache.felix.gogo.runtime</artifactId>
+      <version>0.10.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.universAAL.lddi</groupId>
+      <artifactId>lddi.knx.library</artifactId>
+    </dependency>
+  </dependencies>
+  <build>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.felix</groupId>
+        <artifactId>maven-bundle-plugin</artifactId>
+        <version>2.3.6</version>
+        <extensions>true</extensions>
+        <executions>
+          <execution>
+            <id>bundle-manifest</id>
+            <phase>process-classes</phase>
+            <goals>
+              <goal>manifest</goal>
+            </goals>
+          </execution>
+        </executions>
+        <configuration>
+          <instructions>
+            <Bundle-Name>${project.name}</Bundle-Name>
+            <Bundle-Activator>it.polito.elite.domotics.dog2.knxnetworkdriver.Activator</Bundle-Activator>
+            <Bundle-Description>${project.description}</Bundle-Description>
+            <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
+            <Export-Package>it.polito.elite.domotics.dog2.knxnetworkdriver</Export-Package>
+          </instructions>
+        </configuration>
+      </plugin>
+    </plugins>
+  </build>
+  <profiles>
+    <profile>
+      <id>uAAL-Test-Runtime</id>
+      <dependencies>
+        <dependency>
+          <groupId>org.universAAL.middleware</groupId>
+          <artifactId>mw.data.serialization.osgi</artifactId>
+        </dependency>
+      </dependencies>
+    </profile>
+  </profiles>
 </project>
