--- a/lddi.pom/pom.xml
+++ b/lddi.pom/pom.xml
@@ -3,22 +3,106 @@
     xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
   <modelVersion>4.0.0</modelVersion>
   <parent>
-    <artifactId>uAAL.pom</artifactId>
     <groupId>org.universAAL</groupId>
-    <version>1.2.1-SNAPSHOT</version>
+    <artifactId>uAAL.pom</artifactId>
+    <version>1.3.0</version>
   </parent>
   <groupId>org.universAAL.lddi</groupId>
   <artifactId>lddi.pom</artifactId>
-  <version>1.2.2-SNAPSHOT</version>
+  <version>1.3.1-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>universAAL LDDI Suite</name>
   <description></description>
   <inceptionYear>2010</inceptionYear>
+  <modules>
+    <module>../lddi.knx.library/</module>
+    <module>../lddi.iso11073.library/</module>
+    <module>../lddi.knx.networkdriver/</module>
+    <module>../lddi.knx.refinementdrivers/lddi.knx.dpt1refinementdriver.iso11073/</module>
+    <module>../lddi.knx.devicemanager/</module>
+    <module>../lddi.hw.exporter.activityhub/</module>
+    <module>composite</module>
+  </modules>
   <scm>
     <connection>${svn.base}/${project.artifactId}</connection>
     <developerConnection>${svn.base}/${project.artifactId}</developerConnection>
     <url>${svn.base.url}${project.artifactId}</url>
   </scm>
+  <properties>
+    <gforge.project.name>lddi</gforge.project.name>
+    <maven.compile.source>1.5</maven.compile.source>
+    <maven.compile.target>1.5</maven.compile.target>
+  </properties>
+  <dependencyManagement>
+    <dependencies>
+      <dependency>
+        <groupId>org.universAAL.middleware</groupId>
+        <artifactId>mw.pom</artifactId>
+        <version>1.3.1-SNAPSHOT</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.universAAL.middleware</groupId>
+        <artifactId>mw.pom.osgi</artifactId>
+        <version>1.3.1-SNAPSHOT</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.universAAL.ontology</groupId>
+        <artifactId>ont.pom</artifactId>
+        <version>1.3.1-SNAPSHOT</version>
+        <type>pom</type>
+        <scope>import</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.universAAL.lddi</groupId>
+        <artifactId>lddi.knx.library</artifactId>
+        <version>1.3.1-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.universAAL.lddi</groupId>
+        <artifactId>lddi.iso11073.library</artifactId>
+        <version>1.3.1-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.universAAL.lddi</groupId>
+        <artifactId>lddi.knx.networkdriver</artifactId>
+        <version>1.3.1-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.universAAL.lddi</groupId>
+        <artifactId>lddi.knx.dpt1refinementdriver.iso11073</artifactId>
+        <version>1.3.1-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.universAAL.lddi</groupId>
+        <artifactId>lddi.hw.exporter.activityhub</artifactId>
+        <version>1.3.1-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.universAAL.lddi</groupId>
+        <artifactId>lddi.knx.devicemanager</artifactId>
+        <version>1.3.1-SNAPSHOT</version>
+      </dependency>
+      <dependency>
+        <groupId>org.universAAL.lddi</groupId>
+        <artifactId>lddi.composite</artifactId>
+        <version>1.3.1-SNAPSHOT</version>
+      </dependency>
+    </dependencies>
+  </dependencyManagement>
+  <repositories>
+    <repository>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+      <id>uaal</id>
+      <name>universAAL Repositories</name>
+      <url>http://depot.universaal.org/maven-repo/releases/</url>
+    </repository>
+  </repositories>
   <build>
     <plugins>
       <plugin>
@@ -31,88 +115,4 @@
       </plugin>
     </plugins>
   </build>
-  <modules>
-    <module>../lddi.knx.library/</module>
-    <module>../lddi.iso11073.library/</module>
-    <module>../lddi.knx.networkdriver/</module>
-    <module>../lddi.knx.refinementdrivers/lddi.knx.dpt1refinementdriver.iso11073/</module>
-    <module>../lddi.knx.devicemanager/</module>
-    <module>../lddi.hw.exporter.activityhub/</module>
-	<module>composite</module>
-  </modules>
-  <repositories>
-    <repository>
-      <snapshots>
-        <enabled>false</enabled>
-      </snapshots>
-      <id>uaal</id>
-      <name>universAAL Repositories</name>
-      <url>http://depot.universaal.org/maven-repo/releases/</url>
-    </repository>
-  </repositories>
-  <dependencyManagement>
-    <dependencies>
-      <dependency>
-        <groupId>org.universAAL.middleware</groupId>
-        <artifactId>mw.pom</artifactId>
-        <version>1.2.1-SNAPSHOT</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency>
-      <dependency>
-        <groupId>org.universAAL.middleware</groupId>
-        <artifactId>mw.pom.osgi</artifactId>
-        <version>1.2.1-SNAPSHOT</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency>
-      <dependency>
-        <groupId>org.universAAL.ontology</groupId>
-        <artifactId>ont.pom</artifactId>
-        <version>1.2.1-SNAPSHOT</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency>
-      <dependency>
-        <groupId>org.universAAL.lddi</groupId>
-        <artifactId>lddi.knx.library</artifactId>
-        <version>1.2.2-SNAPSHOT</version>
-      </dependency>
-      <dependency>
-        <groupId>org.universAAL.lddi</groupId>
-        <artifactId>lddi.iso11073.library</artifactId>
-        <version>1.2.2-SNAPSHOT</version>
-      </dependency>
-      <dependency>
-        <groupId>org.universAAL.lddi</groupId>
-        <artifactId>lddi.knx.networkdriver</artifactId>
-        <version>1.2.2-SNAPSHOT</version>
-      </dependency>
-      <dependency>
-        <groupId>org.universAAL.lddi</groupId>
-        <artifactId>lddi.knx.dpt1refinementdriver.iso11073</artifactId>
-        <version>1.2.2-SNAPSHOT</version>
-      </dependency>
-      <dependency>
-        <groupId>org.universAAL.lddi</groupId>
-        <artifactId>lddi.hw.exporter.activityhub</artifactId>
-        <version>1.2.2-SNAPSHOT</version>
-      </dependency>
-      <dependency>
-        <groupId>org.universAAL.lddi</groupId>
-        <artifactId>lddi.knx.devicemanager</artifactId>
-        <version>1.2.2-SNAPSHOT</version>
-      </dependency>
-      <dependency>
-        <groupId>org.universAAL.lddi</groupId>
-        <artifactId>lddi.composite</artifactId>
-        <version>1.2.2-SNAPSHOT</version>
-      </dependency>
-    </dependencies>
-  </dependencyManagement>
-  <properties>
-    <gforge.project.name>lddi</gforge.project.name>
-    <maven.compile.source>1.5</maven.compile.source>
-    <maven.compile.target>1.5</maven.compile.target>
-  </properties>
 </project>
