--- a/lddi.fs20/lddi.fs20.connector/pom.xml
+++ b/lddi.fs20/lddi.fs20.connector/pom.xml
@@ -4,16 +4,15 @@
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.universAAL.lddi</groupId>
-		<artifactId>lddi.pom</artifactId>
-		<version>1.3.6-SNAPSHOT</version>
+		<artifactId>lddi.pom.fs20</artifactId>
+		<version>1.3.3-SNAPSHOT</version>
+		<relativePath>../lddi.pom.fs20</relativePath>
 	</parent>
-	<packaging>bundle</packaging>
 	<artifactId>lddi.fs20.connector</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>FS20 Connector</name>
+	<packaging>bundle</packaging>
+	<name>universAAL LDDI FS20 Connector</name>
 	<description>Connects the FS20 network to OSGi</description>
-	<url />
-
 	<build>
 		<plugins>
 			<plugin>
@@ -22,66 +21,22 @@
 				<extensions>true</extensions>
 				<configuration>
 					<instructions>
-						<Bundle-Name>${pom.name}</Bundle-Name>
+						<Bundle-Name>${project.name}</Bundle-Name>
 						<Bundle-Activator>org.universAAL.lddi.fs20.server.Activator</Bundle-Activator>
-						<Bundle-Description>${pom.description}</Bundle-Description>
-						<Bundle-SymbolicName>${pom.artifactId}</Bundle-SymbolicName>
+						<Bundle-Description>${project.description}</Bundle-Description>
+						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
 						<Private-Package></Private-Package>
 						<Export-Package>org.universAAL.lddi.fs20.*</Export-Package>
 					</instructions>
 				</configuration>
 			</plugin>
-			<!-- <plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-install-plugin</artifactId> 
-				<executions> <execution> <id>install-Swing-SWT</id> <phase>initialize</phase> 
-				<goals> <goal>install-file</goal> </goals> <configuration> <file>${project.basedir}/lib/jd2xx.jar</file> 
-				<groupId>com.usb</groupId> <artifactId>jd2xx</artifactId> <version>1.0.0</version> 
-				<packaging>jar</packaging> </configuration> </execution> </executions> </plugin> -->
 		</plugins>
 	</build>
-	<repositories>
-		<repository>
-			<id>central</id>
-			<name>Central Maven Repository</name>
-			<url>http://repo1.maven.org/maven2</url>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-		</repository>
-		<repository>
-			<id>apache-snapshots</id>
-			<name>Apache Snapshots</name>
-			<url>http://people.apache.org/repo/m2-snapshot-repository</url>
-			<releases>
-				<enabled>false</enabled>
-			</releases>
-			<snapshots>
-				<updatePolicy>daily</updatePolicy>
-			</snapshots>
-		</repository>
-		<repository>
-			<id>uaal</id>
-			<name>universAAL Repositories</name>
-			<url>http://depot.universaal.org/maven-repo/releases/</url>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-		</repository>
-		<repository>
-			<id>uaal-snapshots</id>
-			<name>universAAL Snapshot Repositories</name>
-			<url>http://depot.universaal.org/maven-repo/snapshots/</url>
-			<releases>
-				<enabled>false</enabled>
-			</releases>
-		</repository>
-	</repositories>
 	<dependencies>
 		<dependency>
 			<groupId>org.apache.felix</groupId>
 			<artifactId>org.osgi.core</artifactId>
 		</dependency>
-		<!-- <dependency> <groupId>org.universAAL.middleware</groupId> <artifactId>mw.data.representation</artifactId> 
-			</dependency> -->
 		<dependency>
 			<groupId>org.rxtx</groupId>
 			<artifactId>rxtx</artifactId>
@@ -122,7 +77,5 @@
 			<scope>compile</scope>
 		</dependency>
 	</dependencies>
-
-
 </project>
 
