--- a/lddi.fs20/lddi.fs20.exporter/pom.xml
+++ b/lddi.fs20/lddi.fs20.exporter/pom.xml
@@ -1,30 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
-	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.universAAL.lddi</groupId>
-		<artifactId>lddi.pom</artifactId>
-		<version>1.3.6-SNAPSHOT</version>
+		<artifactId>lddi.pom.fs20</artifactId>
+		<version>1.3.3-SNAPSHOT</version>
+		<relativePath>../lddi.pom.fs20</relativePath>
 	</parent>
 	<artifactId>lddi.fs20.exporter</artifactId>
+	<version>1.3.6-SNAPSHOT</version>
 	<packaging>bundle</packaging>
-	<name>universAAL LDDI Exporter of FS20devices</name>
-	<description>Hardware exporter of FS20 Home Automation components for the universAAL middleware</description>
-	<inceptionYear>2012</inceptionYear>
-	<licenses>
-		<license>
-			<name>The Apache Software License, Version 2.0</name>
-			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
-			<distribution>repo</distribution>
-		</license>
-	</licenses>
-	<scm>
-		<connection>${svn.base}/${project.artifactId}</connection>
-		<developerConnection>${svn.base}/${project.artifactId}</developerConnection>
-		<url>${svn.base.url}${project.artifactId}</url>
-	</scm>
+	<name>universAAL LDDI FS20 Exporter</name>
+	<description>Hardware exporter of FS20 Home Automation components for universAAL</description>
 	<dependencies>
 		<dependency>
 			<groupId>org.universAAL.support</groupId>
@@ -39,14 +27,6 @@
 			<artifactId>junit</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-			<groupId>org.universAAL.middleware</groupId>
-			<artifactId>mw.container.xfaces.osgi</artifactId>
-		</dependency>
-		<!-- <dependency> <groupId>org.universAAL.middleware</groupId> <artifactId>mw.data.representation.osgi</artifactId> 
-			</dependency> -->
-		<!-- <dependency> <groupId>org.universAAL.middleware</groupId> <artifactId>mw.bus.model.osgi</artifactId> 
-			</dependency> -->
 		<dependency>
 			<groupId>org.universAAL.middleware</groupId>
 			<artifactId>mw.bus.context.osgi</artifactId>
@@ -74,7 +54,6 @@
 		<dependency>
 			<groupId>org.universAAL.lddi</groupId>
 			<artifactId>lddi.fs20.connector</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 	<build>
@@ -92,123 +71,6 @@
 					</instructions>
 				</configuration>
 			</plugin>
-			<plugin>
-				<artifactId>maven-resources-plugin</artifactId>
-				<version>2.5</version>
-				<executions>
-					<execution>
-						<id>copy-resources</id>
-						<phase>package</phase>
-						<goals>
-							<goal>copy-resources</goal>
-						</goals>
-						<configuration>
-							<outputDirectory>launches</outputDirectory>
-							<resources>
-								<resource>
-									<directory>target</directory>
-									<filtering>true</filtering>
-									<includes>
-										<include>**/*.composite</include>
-									</includes>
-								</resource>
-							</resources>
-						</configuration>
-					</execution>
-					<execution>
-						<id>copy-resources-for-mw2.0</id>
-						<phase>package</phase>
-						<goals>
-							<goal>copy-resources</goal>
-						</goals>
-						<configuration>
-							<outputDirectory>launcher-mw2.0</outputDirectory>
-							<resources>
-								<resource>
-									<directory>target</directory>
-									<filtering>true</filtering>
-									<includes>
-										<include>**/*.composite</include>
-									</includes>
-								</resource>
-							</resources>
-						</configuration>
-					</execution>
-				</executions>
-			</plugin>
 		</plugins>
 	</build>
-	<repositories>
-		<repository>
-			<id>central</id>
-			<name>Central Maven Repository</name>
-			<url>http://repo1.maven.org/maven2</url>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-		</repository>
-		<repository>
-			<id>apache-snapshots</id>
-			<name>Apache Snapshots</name>
-			<url>http://people.apache.org/repo/m2-snapshot-repository</url>
-			<releases>
-				<enabled>false</enabled>
-			</releases>
-			<snapshots>
-				<updatePolicy>daily</updatePolicy>
-			</snapshots>
-		</repository>
-		<repository>
-			<id>uaal</id>
-			<name>universAAL Repositories</name>
-			<url>http://depot.universaal.org/maven-repo/releases/</url>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-		</repository>
-		<repository>
-			<id>uaal-snapshots</id>
-			<name>universAAL Snapshot Repositories</name>
-			<url>http://depot.universaal.org/maven-repo/snapshots/</url>
-			<releases>
-				<enabled>false</enabled>
-			</releases>
-		</repository>
-	</repositories>
-	<profiles>
-		<profile>
-			<id>uAAL-Runtime</id>
-			<dependencies>
-				<dependency>
-					<groupId>org.universAAL.middleware</groupId>
-					<artifactId>mw.data.serialization.osgi</artifactId>
-				</dependency>
-				<dependency>
-					<groupId>org.apache.felix</groupId>
-					<artifactId>org.apache.felix.dependencymanager.lddi</artifactId>
-					<version>3.0.0</version>
-					<scope>provided</scope>
-				</dependency>
-				<dependency>
-					<groupId>org.apache.felix</groupId>
-					<artifactId>org.apache.felix.devicemanager</artifactId>
-					<version>0.9.0-SNAPSHOT</version>
-					<scope>provided</scope>
-				</dependency>
-
-				<!-- <dependency> <groupId>org.universAAL.lddi</groupId> <artifactId>lddi.fs20.connector</artifactId> 
-					<version>0.0.1-SNAPSHOT</version> </dependency> -->
-				<dependency>
-					<groupId>org.apache.felix</groupId>
-					<artifactId>org.apache.felix.http.jetty</artifactId>
-					<version>2.2.0</version>
-				</dependency>
-				<dependency>
-					<groupId>org.apache.felix</groupId>
-					<artifactId>org.apache.felix.webconsole</artifactId>
-					<version>3.1.8</version>
-				</dependency>
-			</dependencies>
-		</profile>
-	</profiles>
 </project>
