--- a/lddi.zigbee.commissioning/pom.xml
+++ b/lddi.zigbee.commissioning/pom.xml
@@ -1,11 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-
   <parent>
     <groupId>org.universAAL.lddi</groupId>
     <artifactId>lddi.pom</artifactId>
-    <version>1.3.1-SNAPSHOT</version>
+    <version>1.3.6-SNAPSHOT</version>
     <relativePath>../lddi.pom/pom.xml</relativePath>
   </parent>
   <artifactId>lddi.zigbee.commissioning.adapter</artifactId>
@@ -68,9 +67,7 @@
     </dependency>
     <dependency>
       <groupId>org.aaloa.zb4osgi</groupId>
-      <artifactId>
-        org.aaloa.zb4osgi.zigbee.basedriver.api
-      </artifactId>
+      <artifactId>org.aaloa.zb4osgi.zigbee.basedriver.api </artifactId>
       <version>0.6.0-SNAPSHOT</version>
     </dependency>
     <dependency>
@@ -80,9 +77,7 @@
     </dependency>
     <dependency>
       <groupId>org.aaloa.zb4osgi</groupId>
-      <artifactId>
-        org.aaloa.zb4osgi.zigbee.zcl.library
-      </artifactId>
+      <artifactId>org.aaloa.zb4osgi.zigbee.zcl.library</artifactId>
       <version>0.8.0-SNAPSHOT</version>
     </dependency>
     <dependency>
@@ -92,9 +87,7 @@
     </dependency>
     <dependency>
       <groupId>org.aaloa.zb4osgi</groupId>
-      <artifactId>
-        org.aaloa.zb4osgi.zigbee.cc2480.datalink
-      </artifactId>
+      <artifactId>org.aaloa.zb4osgi.zigbee.cc2480.datalink</artifactId>
       <version>0.8.0-SNAPSHOT</version>
     </dependency>
     <dependency>
