--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+lddi.continua.bluetooth/uaal/continua.hdp.manager.caller.test/.classpath
+lddi.continua.bluetooth/uaal/continua.hdp.manager.caller.test/.project
+lddi.continua.bluetooth/uaal/continua.hdp.manager.caller.test/.settings
+lddi.continua.bluetooth/uaal/continua.hdp.manager.caller.test/target
 lddi.continua.bluetooth/uaal/continua.hdp.manager/.classpath
 lddi.continua.bluetooth/uaal/continua.hdp.manager/.project
 lddi.continua.bluetooth/uaal/continua.hdp.manager/.settings
