--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,10 @@ lddi.continua.bluetooth/uaal/continua.hdp.manager.caller.test/.classpath
 lddi.continua.bluetooth/uaal/continua.hdp.manager.caller.test/.project
 lddi.continua.bluetooth/uaal/continua.hdp.manager.caller.test/.settings
 lddi.continua.bluetooth/uaal/continua.hdp.manager.caller.test/target
+lddi.continua.bluetooth/uaal/continua.hdp.manager.subscriber.test/.classpath
+lddi.continua.bluetooth/uaal/continua.hdp.manager.subscriber.test/.project
+lddi.continua.bluetooth/uaal/continua.hdp.manager.subscriber.test/.settings
+lddi.continua.bluetooth/uaal/continua.hdp.manager.subscriber.test/target
 lddi.continua.bluetooth/uaal/continua.hdp.manager/.classpath
 lddi.continua.bluetooth/uaal/continua.hdp.manager/.project
 lddi.continua.bluetooth/uaal/continua.hdp.manager/.settings
