--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+lddi.bluetooth/continua.hdp.manager/.classpath
+lddi.bluetooth/continua.hdp.manager/.project
+lddi.bluetooth/continua.hdp.manager/.settings
 lddi.bluetooth/uaal/continua.hdp.manager.caller/.classpath
 lddi.bluetooth/uaal/continua.hdp.manager.caller/.project
 lddi.bluetooth/uaal/continua.hdp.manager.caller/.settings
