--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,10 @@ lddi.bluetooth/continua.hdp.manager.caller/.classpath
 lddi.bluetooth/continua.hdp.manager.caller/.project
 lddi.bluetooth/continua.hdp.manager.caller/.settings
 lddi.bluetooth/continua.hdp.manager.caller/target
+lddi.bluetooth/continua.hdp.manager.subscriber/.classpath
+lddi.bluetooth/continua.hdp.manager.subscriber/.project
+lddi.bluetooth/continua.hdp.manager.subscriber/.settings
+lddi.bluetooth/continua.hdp.manager.subscriber/target
 lddi.bluetooth/continua.hdp.manager/.classpath
 lddi.bluetooth/continua.hdp.manager/.project
 lddi.bluetooth/continua.hdp.manager/.settings
