--- a/lddi.bluetooth/ieee.x73.std/pom.xml
+++ b/lddi.bluetooth/ieee.x73.std/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>org.universAAL.continua</groupId>
+	<groupId>org.universAAL.lddi</groupId>
 	<artifactId>lddi.libraries.ieeex73std</artifactId>
 	<version>1.3.1-SNAPSHOT</version>
 	<name>IEEE x073 standard implementation</name>
