--- a/lddi.knx.exporter-1.3.5-SNAPSHOT/pom.xml
+++ b/lddi.knx.exporter-1.3.5-SNAPSHOT/pom.xml
@@ -6,7 +6,7 @@
     <groupId>org.universAAL.lddi</groupId>
     <artifactId>lddi.pom</artifactId>
     <version>1.3.5-SNAPSHOT</version>
-    <relativePath>../lddi.pom</relativePath>
+    <!-- <relativePath>../lddi.pom</relativePath> -->
   </parent>
   <artifactId>lddi.knx.exporter</artifactId>
   <version>1.3.5-SNAPSHOT</version>
