--- a/lddi.knx.networkdriver-1.3.5-SNAPSHOT/conf/services/lddi.knx.networkdriver.properties
+++ b/lddi.knx.networkdriver-1.3.5-SNAPSHOT/conf/services/lddi.knx.networkdriver.properties
@@ -1,11 +1,25 @@
-# Network settings for KnxReader/KnxWriter
+### Network settings for KnxReader/KnxWriter
+
+# There are two options for connection:
+# 1. Listen on UDP Multicast channel
+# 2. Use direct tunneling connection to the knx/ip gateway
+
+
+### General ###
+# set multicast to true or false. The latter means that direct tunneling will be established
+multicast=false
+
+
+### UDP Multicast parameters ###
 # KNX multicast address is 224.0.23.12; Udp Port is 3671
 multicastIp=224.0.23.12
 multicastUdpPort=3671
-#
-# IP of computer running knxnetworkdriver
+
+
+### Tunneling parameters ###
+# IP of host running knx.networkdriver
 myIP=192.168.60.107
-#
-# IP of KNX/IP network
-knxGatewayIp=192.168.60.139
+myPort=3671
+# IP of KNX/IP gateway
+knxGatewayIp=192.168.60.101
 knxGatewayPort=3671
