--- a/lddi.fs20/lddi.pom.fs20/pom.xml
+++ b/lddi.fs20/lddi.pom.fs20/pom.xml
@@ -11,7 +11,7 @@
   <artifactId>lddi.pom.fs20</artifactId>
   <version>2.0.1-SNAPSHOT</version>
   <packaging>pom</packaging>
-  <name>universAAL LDDI Suite FS20</name>
+  <name>universAAL LDDI FS20 Suite</name>
   <description>Integration of FS20 components</description>
   <modules>
     <module>../lddi.fs20.connector</module>
@@ -23,9 +23,7 @@
     <url>${svn.base.url}lddi.fs20/${project.artifactId}</url>
   </scm>
   <properties>
-    <nameMatchString>^universAAL LDDI .*</nameMatchString>
-    <groupIdMatchString>^org\.universAAL\.lddi</groupIdMatchString>
-    <artifactIdMatchString>^lddi\..*</artifactIdMatchString>
+    <nameMatchString>^universAAL LDDI FS20 .*</nameMatchString>
   </properties>
   <dependencyManagement>
     <dependencies>
