--- a/.gitignore
+++ b/.gitignore
@@ -51,16 +51,6 @@ lddi.iso11073.library/.classpath
 lddi.iso11073.library/.project
 lddi.iso11073.library/.settings
 lddi.iso11073.library/target
-lddi.knx.devicemanager/.classpath
-lddi.knx.devicemanager/.project
-lddi.knx.devicemanager/.settings
-lddi.knx.devicemanager/launches/runner/bundles
-lddi.knx.devicemanager/launches/runner/cache
-lddi.knx.devicemanager/launches/runner/felix/cache
-lddi.knx.devicemanager/launches/runner/felix/config.ini
-lddi.knx.devicemanager/launches/runner/log
-lddi.knx.devicemanager/launches/target
-lddi.knx.devicemanager/target
 lddi.knx.exporter/.classpath
 lddi.knx.exporter/.project
 lddi.knx.exporter/.settings
@@ -77,6 +67,16 @@ lddi.knx.refinementdrivers/lddi.knx.dpt1refinementdriver.iso11073/.classpath
 lddi.knx.refinementdrivers/lddi.knx.dpt1refinementdriver.iso11073/.project
 lddi.knx.refinementdrivers/lddi.knx.dpt1refinementdriver.iso11073/.settings
 lddi.knx.refinementdrivers/lddi.knx.dpt1refinementdriver.iso11073/target
+lddi.knx/lddi.knx.devicemanager/.classpath
+lddi.knx/lddi.knx.devicemanager/.project
+lddi.knx/lddi.knx.devicemanager/.settings
+lddi.knx/lddi.knx.devicemanager/launches/runner/bundles
+lddi.knx/lddi.knx.devicemanager/launches/runner/cache
+lddi.knx/lddi.knx.devicemanager/launches/runner/felix/cache
+lddi.knx/lddi.knx.devicemanager/launches/runner/felix/config.ini
+lddi.knx/lddi.knx.devicemanager/launches/runner/log
+lddi.knx/lddi.knx.devicemanager/launches/target
+lddi.knx/lddi.knx.devicemanager/target
 lddi.pom/.project
 lddi.pom/.settings
 lddi.pom/composite/.classpath
