--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,18 @@ lddi.bluetooth/lddi.lib.ieeex73std/.project
 lddi.bluetooth/lddi.lib.ieeex73std/.settings
 lddi.bluetooth/lddi.lib.ieeex73std/target
 lddi.bluetooth/lddi.pom.bluetooth/target
+lddi.common/lddi.hw.exporter.activityhub/.classpath
+lddi.common/lddi.hw.exporter.activityhub/.project
+lddi.common/lddi.hw.exporter.activityhub/.settings
+lddi.common/lddi.hw.exporter.activityhub/launches/artifact-test.composite
+lddi.common/lddi.hw.exporter.activityhub/launches/runner/bundles
+lddi.common/lddi.hw.exporter.activityhub/launches/runner/cache
+lddi.common/lddi.hw.exporter.activityhub/launches/runner/felix/cache
+lddi.common/lddi.hw.exporter.activityhub/launches/runner/felix/config.ini
+lddi.common/lddi.hw.exporter.activityhub/launches/runner/log
+lddi.common/lddi.hw.exporter.activityhub/launches/target
+lddi.common/lddi.hw.exporter.activityhub/log
+lddi.common/lddi.hw.exporter.activityhub/target
 lddi.fs20/lddi.fs20.connector/.classpath
 lddi.fs20/lddi.fs20.connector/.project
 lddi.fs20/lddi.fs20.connector/.settings
@@ -25,18 +37,6 @@ lddi.fs20/lddi.fs20.exporter/target
 lddi.fs20/lddi.pom.fs20/.project
 lddi.fs20/lddi.pom.fs20/.settings
 lddi.fs20/lddi.pom.fs20/target
-lddi.hw.exporter.activityhub/.classpath
-lddi.hw.exporter.activityhub/.project
-lddi.hw.exporter.activityhub/.settings
-lddi.hw.exporter.activityhub/launches/artifact-test.composite
-lddi.hw.exporter.activityhub/launches/runner/bundles
-lddi.hw.exporter.activityhub/launches/runner/cache
-lddi.hw.exporter.activityhub/launches/runner/felix/cache
-lddi.hw.exporter.activityhub/launches/runner/felix/config.ini
-lddi.hw.exporter.activityhub/launches/runner/log
-lddi.hw.exporter.activityhub/launches/target
-lddi.hw.exporter.activityhub/log
-lddi.hw.exporter.activityhub/target
 lddi.hw.exporter.x73/.classpath
 lddi.hw.exporter.x73/.project
 lddi.hw.exporter.x73/.settings
