--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,16 @@ lddi.common/lddi.hw.exporter.activityhub/launches/runner/log
 lddi.common/lddi.hw.exporter.activityhub/launches/target
 lddi.common/lddi.hw.exporter.activityhub/log
 lddi.common/lddi.hw.exporter.activityhub/target
+lddi.common/lddi.hw.exporter.x73/.classpath
+lddi.common/lddi.hw.exporter.x73/.project
+lddi.common/lddi.hw.exporter.x73/.settings
+lddi.common/lddi.hw.exporter.x73/launches/artifact-test.composite
+lddi.common/lddi.hw.exporter.x73/launches/artifact.composite
+lddi.common/lddi.hw.exporter.x73/launches/runner/bundles
+lddi.common/lddi.hw.exporter.x73/launches/runner/cache
+lddi.common/lddi.hw.exporter.x73/launches/runner/felix/cache
+lddi.common/lddi.hw.exporter.x73/launches/runner/log
+lddi.common/lddi.hw.exporter.x73/target
 lddi.fs20/lddi.fs20.connector/.classpath
 lddi.fs20/lddi.fs20.connector/.project
 lddi.fs20/lddi.fs20.connector/.settings
@@ -37,16 +47,6 @@ lddi.fs20/lddi.fs20.exporter/target
 lddi.fs20/lddi.pom.fs20/.project
 lddi.fs20/lddi.pom.fs20/.settings
 lddi.fs20/lddi.pom.fs20/target
-lddi.hw.exporter.x73/.classpath
-lddi.hw.exporter.x73/.project
-lddi.hw.exporter.x73/.settings
-lddi.hw.exporter.x73/launches/artifact-test.composite
-lddi.hw.exporter.x73/launches/artifact.composite
-lddi.hw.exporter.x73/launches/runner/bundles
-lddi.hw.exporter.x73/launches/runner/cache
-lddi.hw.exporter.x73/launches/runner/felix/cache
-lddi.hw.exporter.x73/launches/runner/log
-lddi.hw.exporter.x73/target
 lddi.iso11073.library/.classpath
 lddi.iso11073.library/.project
 lddi.iso11073.library/.settings
